@@ -8,11 +8,11 @@ extern "C" {
 #endif
 
 enum umwsu_status {
+  UMWSU_UNDECIDED,
   UMWSU_CLEAN,
   UMWSU_UNKNOWN_FILE_TYPE,
   UMWSU_EINVAL,
   UMWSU_IERROR,
-  UMWSU_UNDECIDED,
   UMWSU_SUSPICIOUS,
   UMWSU_WHITE_LISTED,
   UMWSU_MALWARE,
