@@ -11,16 +11,16 @@ int umwsu_status_cmp(enum umwsu_status s1, enum umwsu_status s2)
     return 0;
 
   switch(s1) {
-  case UMWSU_CLEAN:
-    return -1;
-  case UMWSU_IERROR:
-    return (s2 == UMWSU_CLEAN) ? 1 : -1;
   case UMWSU_UNDECIDED:
-    return (s2 == UMWSU_CLEAN || s2 == UMWSU_IERROR) ? 1 : -1;
+    return -1;
+  case UMWSU_CLEAN:
+    return (s2 == UMWSU_UNDECIDED) ? 1 : -1;
+  case UMWSU_IERROR:
+    return (s2 == UMWSU_UNDECIDED || s2 == UMWSU_CLEAN) ? 1 : -1;
   case UMWSU_SUSPICIOUS:
-    return (s2 == UMWSU_CLEAN || s2 == UMWSU_IERROR || s2 == UMWSU_UNDECIDED) ? 1 : -1;
+    return (s2 == UMWSU_UNDECIDED || s2 == UMWSU_CLEAN || s2 == UMWSU_IERROR) ? 1 : -1;
   case UMWSU_WHITE_LISTED:
-    return (s2 == UMWSU_CLEAN || s2 == UMWSU_IERROR || s2 == UMWSU_UNDECIDED || s2 == UMWSU_SUSPICIOUS) ? 1 : -1;
+    return (s2 == UMWSU_UNDECIDED || s2 == UMWSU_CLEAN || s2 == UMWSU_IERROR || s2 == UMWSU_SUSPICIOUS) ? 1 : -1;
   case UMWSU_MALWARE:
     return 1;
   }
@@ -34,13 +34,14 @@ const char *umwsu_status_str(enum umwsu_status status)
 {
   switch(status) {
 #define M(S) case S: return #S
+    M(UMWSU_UNDECIDED);
     M(UMWSU_CLEAN);
-    M(UMWSU_SUSPICIOUS);
-    M(UMWSU_MALWARE);
-    M(UMWSU_WHITE_LISTED);
+    M(UMWSU_UNKNOWN_FILE_TYPE);
     M(UMWSU_EINVAL);
     M(UMWSU_IERROR);
-    M(UMWSU_UNKNOWN_FILE_TYPE);
+    M(UMWSU_SUSPICIOUS);
+    M(UMWSU_WHITE_LISTED);
+    M(UMWSU_MALWARE);
   }
 
   return "UNKNOWN STATUS";
@@ -49,22 +50,24 @@ const char *umwsu_status_str(enum umwsu_status status)
 const char *umwsu_status_pretty_str(enum umwsu_status status)
 {
   switch(status) {
+  case UMWSU_UNDECIDED:
+    return "undecided";
   case UMWSU_CLEAN:
     return "clean";
-  case UMWSU_SUSPICIOUS:
-    return "suspicious";
-  case UMWSU_MALWARE:
-    return "malware";
-  case UMWSU_WHITE_LISTED:
-    return "white listed";
+  case UMWSU_UNKNOWN_FILE_TYPE:
+    return "ignored";
   case UMWSU_EINVAL:
     return "invalid argument";
   case UMWSU_IERROR:
     return "internal error";
-  case UMWSU_UNKNOWN_FILE_TYPE:
-    return "ignored";
+  case UMWSU_SUSPICIOUS:
+    return "suspicious";
+  case UMWSU_WHITE_LISTED:
+    return "white listed";
+  case UMWSU_MALWARE:
+    return "malware";
   }
 
-  return "inconnu";
+  return "unknown status";
 }
 
